logs/raven_pipbuild_data.log
Package search: {'_pypi_ordering': False, 'version': '5.3.1', 'name': 'raven', 'summary': 'Raven is a client for Sentry (https://www.getsentry.com)'}
Fetching package metadata: ....
Removing old build directory
Removing old work directory
BUILD START: raven-5.3.1-py27_0
Fetching package metadata: ......
Solving package specifications: .+ pip install raven
Collecting raven
  Downloading http://localhost/packages/source/r/raven/raven-5.3.1.tar.gz (319kB)
Installing collected packages: raven
  Running setup.py install for raven
Successfully installed raven-5.3.1
Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/raven/transport/aiohttp.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/raven/transport/aiohttp.py", line 31
    def __init__(self, parsed_url, *, verify_ssl=True, resolve=True,
                                    ^
SyntaxError: invalid syntax


The following NEW packages will be INSTALLED:

    openssl:    1.0.1k-1    
    pip:        7.0.3-py27_0
    python:     2.7.10-0    
    readline:   6.2-2       
    setuptools: 17.0-py27_0 
    sqlite:     3.8.4.1-1   
    system:     5.8-2       
    tk:         8.5.18-0    
    zlib:       1.2.8-0     

Linking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  11%[sqlite              ]|###########                                       |  22%[system              ]|################                                  |  33%[tk                  ]|######################                            |  44%[zlib                ]|###########################                       |  55%[python              ]|#################################                 |  66%[setuptools          ]|######################################            |  77%[pip                 ]|############################################      |  88%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
Copying /home/ubuntu/pypi-conda-builds/raven to /home/ubuntu/miniconda/conda-bld/work
Package: raven-5.3.1-py27_0
source tree in: /home/ubuntu/miniconda/conda-bld/work
compiling .pyc files...
Command failed: /home/ubuntu/miniconda/envs/_build/bin/python -Wi /home/ubuntu/miniconda/envs/_build/lib/python2.7/compileall.py -q -x port_v3 /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages
Creating standard recipe for raven-5.3.1
Converting recipe in /home/ubuntu/pypi-conda-builds/raven
package = raven
   dependencies = []
Building conda package for raven
